<resources>
    <string name="app_name">StarWarsWiki</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_people">People</string>
    <string name="menu_planets">Planets</string>
    <string name="menu_films">Films</string>
    <string name="menu_favorites">Favorites</string>
    <string name="next_page">Next page</string>
    <string name="previous_page">Previous page</string>

    <!-- People details layout-->
    <string name="height">Height </string>
    <string name="mass">Mass</string>
    <string name="hair_color">Hair color</string>
    <string name="skin_color">Skin color</string>
    <string name="eye_color">Eye color</string>
    <string name="birth_year">Birth year</string>
    <string name="gender">Gender</string>
    <string name="homeworld">Homeworld</string>
    <string name="films">Films</string>

    <!-- Planets details layout -->
    <string name="rotation_period">Rotation period</string>
    <string name="orbital_period">Orbital period</string>
    <string name="diameter">Diameter</string>
    <string name="climate">Climate</string>
    <string name="gravity">Gravity</string>
    <string name="terrain">Terrain</string>
    <string name="population">Population</string>
    <string name="surface_water">Surface water</string>

    <!-- Films details layout -->
    <string name="director">Director</string>
    <string name="episode_id">Episode No.</string>
    <string name="opening_crawl"><u>Opening crawl</u></string>
    <string name="producer">Producer</string>
    <string name="release_date">Release date</string>
</resources>
